Return errors with json content type
- Add ErrorMessage class for wrapping an error
- Document expected error messages in API docs
